plugins/custom-definesandincludes/compilerprovider/gcclikecompiler.cpp
@@ -190,7 +190,10 @@ Path::List GccLikeCompiler::includes(Utils::LanguageType type, const QString& ar
                 } else {
                     // This is an include path, add it to the list.
                     auto hostPath = rt->pathInHost(Path(line.trimmed().toString()));
-                    data.includePaths << Path(QFileInfo(hostPath.toLocalFile()).canonicalFilePath());
+                    // but skip folders with compiler builtins, we cannot parse these with clang
+                    if (!QFile::exists(hostPath.toLocalFile() + QLatin1String("/varargs.h"))) {
+                        data.includePaths << Path(QFileInfo(hostPath.toLocalFile()).canonicalFilePath());
+                    }
                 }
                 break;
             default:
